Review changes
RISDEV-7932